# ai

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  gemini-models.md  gunicorn_config.py  main.py  pyproject.toml
ai_docs/: digitalocean-flask-gunicorn-deployment.md  repomix-output.xml
infrastructure/: .gitignore  CLEANUP-SUMMARY.md  DOCKER-AUTH.md  README.md  main.tf  nginx.conf.tpl  outputs.tf  post-deploy-setup.sh  terraform.tfvars.example  user_data.sh  variables.tf
specs/: evalpoint-v1.md
src/: app.py
src/static/css/: style.css
src/templates/: about.html  base.html  contact.html  home.html  services.html
static/css/: style.css
static/images/: README.md
static/js/: main.js
static/videos/: README.md
templates/: about.html  base.html  contact.html  home.html  services.html  strategy_call.html
tests/: test_app.py
